a1/brendan_gordon/TEST_PROGRAMS/invalidtype/shao_kun_deng/invalid3.min
if 1.0 then
	print "x";
endif
